k3s/manifests/phptest/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: phptest
  labels:
    name: phptest
